[gd_scene load_steps=11 format=2]

[ext_resource path="res://FpsLabel.gd" type="Script" id=1]
[ext_resource path="res://FieldOfView.gd" type="Script" id=2]
[ext_resource path="res://fov_composite.shader" type="Shader" id=3]
[ext_resource path="res://TerrainOccluder.gd" type="Script" id=4]
[ext_resource path="res://Level.tscn" type="PackedScene" id=5]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("FogViewport")

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("VisibilityViewport")

[sub_resource type="ShaderMaterial" id=3]
resource_local_to_scene = true
shader = ExtResource( 3 )
shader_param/visible_old_transform = null
shader_param/visible_new_transform = null
shader_param/seen_transform = null
shader_param/move_progress = null
shader_param/fog_of_war = SubResource( 1 )
shader_param/visible = SubResource( 2 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("WorldViewport")

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 2

[node name="FieldOfView" type="TextureRect"]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 4 )
expand = true
stretch_mode = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldViewport" type="Viewport" parent="."]
size = Vector2( 384, 216 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 3

[node name="Level" parent="WorldViewport" instance=ExtResource( 5 )]

[node name="FogViewport" type="Viewport" parent="."]
size = Vector2( 1, 1 )
transparent_bg = true
hdr = false
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1
gui_disable_input = true

[node name="VisibilityViewport" type="Viewport" parent="."]
size = Vector2( 1, 1 )
transparent_bg = true
disable_3d = true
usage = 0
render_target_v_flip = true
render_target_update_mode = 1
gui_disable_input = true

[node name="BelowLayer" type="CanvasLayer" parent="VisibilityViewport"]
layer = -1

[node name="WhiteBackground" type="ColorRect" parent="VisibilityViewport/BelowLayer"]
material = SubResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TerrainOccluder" type="Node2D" parent="VisibilityViewport"]
script = ExtResource( 4 )

[node name="FpsLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 192.0
margin_right = 56.0
margin_bottom = 206.0
text = "FPS"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
